переделал css index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,19 @@
 body {
-  background: #e5e5e5;
+  background: #ffffff;
   color: #212121;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: normal;
 }
 
 /* <!--Header--> */
 .link {
-  font-family: Raleway;
+  font-family: Ralewayo;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
   color: #000000;
+  text-decoration: none;
 }
 .color-log {
   font-family: Raleway;
@@ -20,29 +21,28 @@ body {
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
-
-  /* identical to box height */
   letter-spacing: 0.03em;
 
   color: #2196f3;
 }
 
-/* Все Ul */
+/* Весь тег Ul без точек */
 .list {
   list-style: none;
 }
 
-/* link-item */
-.link-item {
+/* header-link */
+.header-link {
   color: #212121;
 }
 /* ховер для ссылок */
-.link-item:hover,
-.link-item:focus {
+.header-link:hover,
+.header-link:focus {
   color: #2196f3;
 }
+
 /* <!--contacts sections --> */
-.contact-list {
+.header-mail {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -51,7 +51,7 @@ body {
   letter-spacing: 0.02em;
   color: #757575;
 }
-.contact-tel {
+.header-tel {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -62,17 +62,21 @@ body {
 }
 
 /* ховер и фокус для сектора контакты */
-.contact-list:hover,
-.contact-list:focus {
+.header-mail:hover,
+.header-mail:focus {
   color: #2196f3;
 }
-.contact-tel:hover,
-.contact-tel:focus {
+.header-tel:hover,
+.header-tel:focus {
   color: #2196f3;
 }
+
 /* <!--section button--> */
-.section-tittle {
-  font-family: Roboto;
+.section-banner {
+  background: #2f303a;
+}
+
+.section-title {
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
@@ -102,28 +106,40 @@ body {
   border-radius: 4px;
 }
 /* <!--section list--> */
-.about-tittle {
-  font-family: Roboto;
+.hero-title {
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
+
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+.hero-item {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  /* identical to box height */
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
 }
-.tittle-description {
-  font-family: Roboto;
+.hero-after-title {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
+
   /* or 171% */
   letter-spacing: 0.03em;
+
   color: #757575;
 }
 /* <!--Our work section--> */
-.sectio-work {
+.section-work {
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
@@ -134,21 +150,22 @@ body {
   color: #212121;
 }
 /* <!--section team--> */
-.my-team {
+.team-title {
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
-
+  text-align: center;
   letter-spacing: 0.03em;
 
   color: #212121;
 }
-.team-name {
+.team-name-title {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
+  text-align: center;
   color: #212121;
 }
 .team-description {
@@ -156,11 +173,11 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 19px;
+  text-align: center;
   color: #757575;
 }
 /* <!--footer section--> */
 .section-footer {
-  font-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
@@ -168,7 +185,6 @@ body {
   background: #2f303a;
 }
 .color-footer {
-  ont-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
@@ -180,18 +196,36 @@ body {
 }
 .link-footer {
   color: #2196f3;
+  text-decoration: none;
 }
 /* address */
 .address {
-  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #ffffff;
+  text-decoration: none;
 }
 .address:hover,
 .address:focus {
+  color: #2196f3;
+}
+.contact-tel,
+.contact-mail {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+.contact-tel:hover,
+.contact-tel:focus,
+.contact-mail:hover,
+.contact-mail:focus {
   color: #2196f3;
 }
