--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body {
   background: #ffffff;
   color: #212121;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto, raleway, sans-serif;
 }
 
 /* <!--Header--> */
