--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,18 @@ body {
   color: #212121;
   font-family: Roboto, raleway, sans-serif;
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
 /* <!--Header--> */
 .link {
